compiler/tests/fixtures/invalid/semantics/reaction_location_exactly_additional_criteria.viv
// Invalid: reaction location exactly with additional criteria

reserved action respond:
    roles:
        @responder:
            as: initiator

action trigger:
    roles:
        @actor:
            as: initiator
    reactions:
        queue action respond:
            with:
                @responder: @actor
            location:
                exactly: @actor.home
                none: @actor.work
